--- a/Extension/_locales/sv/messages.json
+++ b/Extension/_locales/sv/messages.json
@@ -1,68 +1,104 @@
 {
-  "appDesc": {
-    "message": "YT Presence lägger till Discord Rich Presence Integration, Mediekontroller och mycket mer till YouTube/YouTube Musik, Twitch osv..."
-  },
-  "connected": {
-    "message": "Ansluten"
-  },
-  "disconnected": {
-    "message": "Avkopplad"
-  },
-  "installedThanks": {
-    "message": "Tack för att du har installerat YT Presence"
-  },
-  "installedApp": {
-    "message": "Har du installerat programmet ännu?"
-  },
-  "installedNo": {
-    "message": "Nej? Följ dessa steg:"
-  },
-  "installedStepApp": {
-    "message": "Ladda ner den senaste versionen från $1"
-  },
-  "installedStepAppMyRepository": {
-    "message": "mitt GitHub-förråd"
-  },
-  "installedWaitInstalled": {
-    "message": "Öppna installationsprogrammet och vänta tills det installeras"
-  },
-  "installedMayWarning": {
-    "message": "Du kanske får en varning om brandvägg och Smartscreen (det är inte ett virus jag lovar)"
-  },
-  "installedAppAutostart": {
-    "message": "Applikationen bör starta automatiskt, du kan kontrollera detta genom att titta på ditt aktivitetsfält (Windows) eller menyraden (Mac OS)"
-  },
-  "installedYes": {
-    "message": "Ja? Du är redo att gå!"
-  },
-  "installedStart": {
-    "message": "Börja med att titta på en video på YouTube, titta på dina älskade streamers på Twitch, kanske även Netflix... Vem vet? Eller så lyssnar du bara på dina favoritlåtar på SoundCloud och YouTube Music."
-  },
-  "installedSupportMe": {
-    "message": "Stöd mig!"
-  },
-  "updatedYTPUpdated": {
-    "message": "YT Presence har uppdaterats!"
-  },
-  "updatedWhatsNew": {
-    "message": "Vad är nytt?"
-  },
-  "updatedWhatChanged": {
-    "message": "Vad har förändrats?"
-  },
-  "updatedAdded0": {
-    "message": "Installera fliksidan"
-  },
-  "updatedAdded1": {
-    "message": "Uppdatera fliksidan"
-  },
-  "updatedChanged0": {
-    "message": "Små buggfixar"
-  },
-  "updatedChanged1": {
-    "message": "Tillägg organisation"
-  },
-  "updatedAdded2": {
-    "message": "Språkstöd"
-  }
+    "appDesc": {
+        "message": "PreMiD lägger till Discord Rich Presence Integration, Mediekontroller och mycket mer till YouTube/YouTube Musik, Twitch osv..."
+    },
+    "connected": {
+        "message": "Ansluten"
+    },
+    "disconnected": {
+        "message": "Avkopplad"
+    },
+    "installedThanks": {
+        "message": "Tack för att du har installerat PreMiD"
+    },
+    "installedApp": {
+        "message": "Har du installerat programmet ännu?"
+    },
+    "installedNo": {
+        "message": "Nej? Följ dessa steg:"
+    },
+    "installedStepApp": {
+        "message": "Ladda ner den senaste versionen från $1"
+    },
+    "installedStepAppMyRepository": {
+        "message": "mitt GitHub-förråd"
+    },
+    "installedWaitInstalled": {
+        "message": "Öppna installationsprogrammet och vänta tills det installeras"
+    },
+    "installedMayWarning": {
+        "message": "Du kanske får en varning om brandvägg och Smartscreen (det är inte ett virus jag lovar)"
+    },
+    "installedAppAutostart": {
+        "message": "Applikationen bör starta automatiskt, du kan kontrollera detta genom att titta på ditt aktivitetsfält (Windows) eller menyraden (Mac OS)"
+    },
+    "installedYes": {
+        "message": "Ja? Du är redo att gå!"
+    },
+    "installedStart": {
+        "message": "Börja med att titta på en video på YouTube, titta på dina älskade streamers på Twitch, Se dina favoritanimier på KissAnime eller JKAnime, kanske även Netflix ... Vem vet? <br> Eller du lyssnar bara på dina favoritlåtar på SoundCloud och YouTube Music. Inställningar kan hittas genom att klicka på PreMiD-ikonen i din webbläsare."
+    },
+    "installedSupportMe": {
+        "message": "Stöd mig!"
+    },
+    "updatedYTPUpdated": {
+        "message": "PreMid har uppdaterats!"
+    },
+    "updatedWhatsNew": {
+        "message": "Vad är nytt?"
+    },
+    "updatedWhatChanged": {
+        "message": "Vad har förändrats?"
+    },
+    "updatedAdded0": {
+        "message": "Stöd till JKAnime & KissAnime"
+    },
+    "updatedAdded1": {
+        "message": "Extension popup"
+    },
+    "updatedChanged0": {
+        "message": "Mycket och jag menar mycket omskrivningar!"
+    },
+    "updatedChanged1": {
+        "message": "Stora förbättringar av hastigheten på Appen"
+    },
+    "updatedAdded2": {
+        "message": "Inställnings Sync (Google-konto)"
+    },
+    "playbackPlaying": {
+        "message": "Spelar tillbaka"
+    },
+    "playbackPaused": {
+        "message": "Uppspelning pausad"
+    },
+    "about": {
+        "message": "Om"
+    },
+    "feedback": {
+        "message": "Feedback"
+    },
+    "options": {
+        "message": "Alternativ"
+    },
+    "general": {
+        "message": "Allmänt"
+    },
+    "enabled": {
+        "message": "Aktiverad"
+    },
+    "titleMenubar": {
+        "message": "Titel Meny Bar"
+    },
+    "mediaControls": {
+        "message": "Mediekontroller"
+    },
+    "checkForUpdates": {
+        "message": "Sök efter uppdateringar"
+    },
+    "systemStartup": {
+        "message": "Systemstart"
+    },
+    "presences": {
+        "message": "Presenceser"
+    }
 }
