--- a/Extension/languages/nl.json
+++ b/Extension/languages/nl.json
@@ -1,178 +1,24 @@
-[
-    {
-        "term": "tab.installed.heading",
-        "definition": "Bedankt voor het installeren van PreMiD",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.subHeading.didInstallQuestion",
-        "definition": "Heb je de applicatie al ge\u00efnstalleerd?",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.subHeading.notInstalled",
-        "definition": "Zo niet? Volg deze stappen:",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.instructions.download",
-        "definition": "Download de nieuwste versie vanaf $1",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.instruction.github",
-        "definition": "mijn repository",
-        "context": "Link to the GitHub project",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.instructions.wait",
-        "definition": "Open het installatieprogramma en wacht totdat het is ge\u00efnstalleerd",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.instructions.warnings",
-        "definition": "U ontvangt mogelijk een waarschuwing over FireWall en SmartScreen (het is geen virus dat beloof ik)",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.instructions.autostart",
-        "definition": "De applicatie zou automatisch moeten starten, u kunt dit controleren door te kijken naar uw taakbalk (Windows) of uw menubalk (MacOS)",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.subHeading.ready",
-        "definition": "Ja? Je bent klaar om te beginnen!",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.intro",
-        "definition": "Begin met het bekijken van een video op YouTube, het bekijken van je favoriete streamers op Twitch, Bekijk je favoriete animaties op KissAnime of JKAnime, misschien zelfs Netflix ... Wie weet?<br>Of je luistert gewoon naar je favoriete nummers op SoundCloud en YouTube Music. Instellingen kunnen worden gevonden door op het pictogram PreMiD in uw browser te klikken.",
-        "context": "Pls leave <br> as is.",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.updated.heading",
-        "definition": "PreMiD is bijgewerkt!",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.updated.subHeading.whatsNew",
-        "definition": "Wat is er nieuw?",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.updated.subHeading.whatChanged",
-        "definition": "Wat is er veranderd?",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "presence.playback.playing",
-        "definition": "Afspelen",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "presence.playback.paused",
-        "definition": "Afspelen gepauzeerd",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.tabs.options",
-        "definition": "Opties",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.headings.general",
-        "definition": "Algemeen",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.headings.presences",
-        "definition": "Presences",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.enabled",
-        "definition": "Ingeschakeld",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.titleMenubar",
-        "definition": "Titel Menubar",
-        "context": "Menubar is a name (Mac OS only)",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.mediaControls",
-        "definition": "Mediabediening",
-        "context": "Media Control keys (Keyboard\/headphones)",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.checkForUpdates",
-        "definition": "Controleer op updates",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    }
-]
+{
+    "tab.installed.heading": "Bedankt voor het installeren van PreMiD",
+    "tab.installed.subHeading.didInstallQuestion": "Heb je de applicatie al geïnstalleerd?",
+    "tab.installed.subHeading.notInstalled": "Zo niet? Volg deze stappen:",
+    "tab.installed.instructions.download": "Download de nieuwste versie vanaf $1",
+    "tab.installed.instruction.github": "mijn repository",
+    "tab.installed.instructions.wait": "Open het installatieprogramma en wacht totdat het is geïnstalleerd",
+    "tab.installed.instructions.warnings": "U ontvangt mogelijk een waarschuwing over FireWall en SmartScreen (het is geen virus dat beloof ik)",
+    "tab.installed.instructions.autostart": "De applicatie zou automatisch moeten starten, u kunt dit controleren door te kijken naar uw taakbalk (Windows) of uw menubalk (MacOS)",
+    "tab.installed.subHeading.ready": "Ja? Je bent klaar om te beginnen!",
+    "tab.installed.intro": "Begin met het bekijken van een video op YouTube, het bekijken van je favoriete streamers op Twitch, Bekijk je favoriete animaties op KissAnime of JKAnime, misschien zelfs Netflix ... Wie weet?<br>Of je luistert gewoon naar je favoriete nummers op SoundCloud en YouTube Music. Instellingen kunnen worden gevonden door op het pictogram PreMiD in uw browser te klikken.",
+    "tab.updated.heading": "PreMiD is bijgewerkt!",
+    "tab.updated.subHeading.whatsNew": "Wat is er nieuw?",
+    "tab.updated.subHeading.whatChanged": "Wat is er veranderd?",
+    "presence.playback.playing": "Afspelen",
+    "presence.playback.paused": "Afspelen gepauzeerd",
+    "popup.tabs.options": "Opties",
+    "popup.options.headings.general": "Algemeen",
+    "popup.options.headings.presences": "Presences",
+    "popup.options.enabled": "Ingeschakeld",
+    "popup.options.titleMenubar": "Titel Menubar",
+    "popup.options.mediaControls": "Mediabediening",
+    "popup.options.checkForUpdates": "Controleer op updates"
+}
